<resources>
    <string name="app_name">NewsMead</string>
    <string name="symbol_bullet">•</string>
    <string name="commons_category">Category</string>
    <string name="commons_sources">Sources</string>
    <string name="btn_next">Next</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save Changes</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_update">Update</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_date">Date</string>
    <string name="commons_welcome_to">Welcome to</string>
    <string name="commons_email_address">Email Address</string>
    <string name="commons_email_address_hint">Enter email here</string>
    <string name="commons_password">Password</string>
    <string name="commons_password_hint">Enter password here</string>
    <string name="sign_up_title">Create an account</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_name_hint">Enter name here</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_get_started_btn">Get Started</string>
    <string name="sign_up_log_back_in_btn">Log back in</string>
    <string name="log_in_title">Welcome Back! Log in</string>
    <string name="log_in_remember_me">Remember Me?</string>
    <string name="log_in_btn">Log in</string>
    <string name="log_in_create_account_btn">Create an Account</string>
    <string name="onboarding_title">Welcome to NewsMead</string>
    <string name="onboarding_interest">What are you interested in?</string>
    <string name="onboarding_choose">Choose three (3) or more.</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_saved">Saved</string>
    <string name="nav_profile">Profile</string>
    <string name="home_title">Home</string>
    <string name="home_history_btn">History</string>
    <string name="history_title">Reading History</string>
    <string name="search_title">Search</string>
    <string name="search_latest_news">Latest News</string>
    <string name="search_label">Searching for:</string>
    <string name="search_no_results">No results found</string>
    <string name="search_simplify_btn">Simplify</string>
    <string name="saved_title">Saved Articles</string>
    <string name="saved_your_lists">Your Lists</string>
    <string name="saved_all">All</string>
    <string name="saved_notes_btn">Open Notes</string>
    <string name="saved_create">Create new list</string>
    <string name="saved_sort_btn">Sort</string>
    <string name="profile_title">Profile</string>
    <string name="profile_subtitle">Update your account</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_password">Password</string>
    <string name="profile_save">Save Changes</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_darkmode">Dark Mode</string>
    <string name="article_translate_btn">Filipino</string>
    <string name="article_read_aloud_btn">Read Aloud</string>
    <string name="article_save_to_list_btn">Save to List</string>
    <string name="article_by">by</string>
    <string name="article_show_more_btn">Show more from AUTHOR</string>
    <string name="article_recommended">Recommended for you</string>
    <string name="article_theme_light">Light</string>
    <string name="article_theme_dark">Dark</string>
    <string name="article_theme_sepia">Sepia</string>
    <string name="article_text_smaller_btn">Smaller Text</string>
    <string name="article_text_larger_btn">Larger Text</string>
    <string name="save_list_title">Save to...</string>
    <string name="save_list_new">New List</string>
    <string name="search_filter_language">Language</string>
    <string name="search_filter_sort_by">Sort By</string>
    <string name="search_filter_sort_by_most_relevant">Most Relevant</string>
    <string name="search_filter_sort_by_recent">Recent</string>
    <string name="search_filter_sort_by_popularity">Popularity</string>
    <string name="search_filter_apply_btn">Apply Filters</string>
    <string name="sample_checkbox">Checkbox</string>
    <string name="sample_saved_list_title">List Title</string>
    <string name="sample_saved_list_number">10 articles</string>
    <string name="sample_search_prompt">Lorem ipsum</string>
    <string name="sample_search_results">Loading results</string>
    <string name="sample_category">Technology</string>
    <string name="sample_source">INQUIRER.NET</string>
    <string name="sample_author">Juan dela Cruz</string>
    <string name="sample_title">Lorem ipsum dolor sit amet consectetur. Pharetra metus  at id lacus at. porttitor</string>
    <string name="sample_date">Jun 2, 2023</string>
    <string name="sample_read_time">5 min read</string>
    <string name="sample_chip">Lorem Ipsum</string>
    <string name="sample_article_headline">NBA Western Conference Preview: 2023-2024 Season</string>
    <string name="small_text">
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies velit eu arcu molestie,"
        "quis pretium quam venenatis. Fusce leo odio, aliquam bibendum justo at, imperdiet aliquet elit."
        "Nulla interdum magna et nunc finibus tincidunt ac non nunc. Morbi vulputate libero at mattis fringilla. "
        "Sed vitae nunc eu mauris porta consectetur at non ante. Aenean aliquam odio ut felis porttitor iaculis. "
        "Sed ut risus in libero dapibus faucibus.\n"

        "Aenean ornare ligula et euismod commodo. Pellentesque laoreet in quam sed porttitor. Donec aliquam dolor"
        "enim, in euismod massa auctor eget. Maecenas in justo arcu. Cras dignissim est vitae lectus interdum, tincidunt "
        "consequat elit pretium. Aenean lectus justo, dignissim nec lorem quis, sodales aliquam dui. Sed vitae magna libero. "
        "Aenean posuere eu nibh at gravida. Duis et libero feugiat arcu viverra fermentum et id odio. Ut dapibus imperdiet iaculis. "
        "In rutrum at urna eget tempus. Etiam euismod ligula efficitur, tincidunt lorem ac, pellentesque nisl. Praesent elementum ultricies "
        "mauris nec tincidunt. Ut a ligula id nisl interdum pellentesque. Nulla arcu eros, varius vel libero sagittis, sollicitudin "
        "bibendum massa. "
    </string>
</resources>