<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSortChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSearchCategoryDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/commons_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgDialogCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSearchCategoryDialog">

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvSourceCategoryDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/commons_sources"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cgDialogCategory" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgDialogSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSourceCategoryDialog">

        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSortDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_filter_sort_by"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/rbMostRelevant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial_regular"
                android:text="@string/search_filter_sort_by_most_relevant" />

            <RadioButton
                android:id="@+id/rbRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial_regular"
                android:text="@string/search_filter_sort_by_recent" />

            <RadioButton
                android:id="@+id/rbPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial_regular"
                android:text="@string/search_filter_sort_by_popularity" />
        </RadioGroup>

        <Button
            android:id="@+id/btnDateFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/arial_regular"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:text="@string/btn_date"
            android:textAlignment="textStart"
            android:textColor="?secondaryButtonTextColor"
            app:backgroundTint="?primaryBackgroundColor"
            app:icon="@drawable/date_range_nofill_weight400"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:iconTint="?primaryIconColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/btnSearchFiltersApply"
            style="@style/Widget.App.ButtonStyle.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?primaryButtonBgColor"
            android:text="@string/search_filter_apply_btn"
            android:textColor="?primaryButtonTextColor"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDateFilter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>