<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?primaryBackgroundColor"
    tools:context=".fragments.account.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_double"
        android:layout_marginTop="@dimen/welcome_layout_marginTop"
        android:layout_marginEnd="@dimen/common_margin_double"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:text="@string/commons_welcome_to"
            android:textColor="?primaryTextColor"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/garamond_regular"
            android:text="@string/app_name"
            android:textColor="?primaryTextColor"
            android:textSize="@dimen/app_title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvLogInAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin_double"
        android:fontFamily="@font/arial_regular"
        android:text="@string/log_in_title"
        android:textColor="?primaryTextColor"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAccountDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_double"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin_double"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogInAccount">

        <TextView
            android:id="@+id/tvAccLogEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_regular"
            android:text="@string/commons_email_address"
            android:textColor="?primaryTextColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccLogEmail"
            style="@style/Widget.App.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccLogEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAccLogEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/arial_regular"
                android:inputType="textEmailAddress"
                android:labelFor="@id/tvAccLogEmail"
                android:textColor="?primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvAccLogPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial_regular"
            android:text="@string/commons_password"
            android:textColor="?primaryTextColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAccLogEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccLogPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.TextInputLayout.FilledBox"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccLogPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAccLogPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/arial_regular"
                android:inputType="textPassword"
                android:labelFor="@id/tvAccLogPassword"
                android:textColor="?primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial_regular"
            android:text="@string/log_in_remember_me"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAccLogPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccLogIn"
        style="@style/Widget.App.ButtonStyle.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/arial_regular"
        android:text="@string/log_in_btn"
        android:textColor="?primaryButtonTextColor"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAccCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAccCreate"
        style="@style/Widget.App.ButtonStyle.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginBottom="@dimen/common_margin_triple"
        android:background="@android:color/transparent"
        android:fontFamily="@font/arial_regular"
        android:text="@string/log_in_create_account_btn"
        android:textColor="?primaryTextColor"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>